# rabbitmq-c

./: CMakeLists.txt  ChangeLog.md  README.md  RELEASE_NOTES.md  librabbitmq.pc.in
.devcontainer/: Dockerfile  devcontainer.json
.github/config/: release-config.json
.github/workflows/: add-to-project.yaml  ci.yml  codeql-analysis.yml  release-notes.yaml  sync.yaml
cmake/: config.h.in  rabbitmq-c-config.cmake.in
fuzz/: fuzz_server.c  fuzz_table.c  fuzz_url.c
include/rabbitmq-c/: amqp.h  ssl_socket.h
labview/: CMakeLists.txt  README.md  labview_rabbitmq.c  labview_rabbitmq.h  labview_types.c  labview_types.h  lib_test.c  msg_headers.c  msg_headers.h  utils.h
labview/cintools/: ILVDataInterface.h  ILVTypeInterface.h  labview.lib  labviewv.lib  liblv.so.20  liblv.so.20.0.0  unknwn.h  unknwn_i.c  wtypes.h  wtypes_i.c
librabbitmq/: CMakeLists.txt  amqp_openssl.c  amqp_table.c
tools/: common.c
tools/doc/: amqp-consume.xml
